Fixed Issue #6 - Background wrapping around

--- a/Hermit/src/app/shared/post-type/post-type.component.css
+++ b/Hermit/src/app/shared/post-type/post-type.component.css
@@ -17,12 +17,6 @@ h1 {
   color: white
 }
 
-@media screen and (max-width: 768px) {
-  #post {
-    width: fit-content;
-  }
-}
-
 #post {
   height: 100%;
 }
