--- a/Hermit/src/app/sidemenu/sidemenu.component.css
+++ b/Hermit/src/app/sidemenu/sidemenu.component.css
@@ -60,6 +60,10 @@ hr {
 
 }
 
+.active {
+    background-color: yellow;
+}
+
 .menusectiontitle {
     color: white;
     font-size: 1rem;
